[package]
name = "gb-cpu-sim"
version = "1.1.0"
description = "A very simple Game Boy CPU emulator."
license = "MIT"
homepage = "https://github.com/eievui5/gb-cpu-sim"
repository = "https://github.com/eievui5/gb-cpu-sim"
readme = "README.md"
edition = "2021"

[dependencies]
try-from-discrim = "1.0.0"
